--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <source src="audio/keyboard.ogg" type="audio/mpeg">
     </audio>
     <div class="wrapper">
-        <h1 class="terminal__logo">TERMINAL</h1>
-        <button id="start-button" class="start__button"></button>
+        <button id="start-button" class="terminal__logo">TERMINAL</button>
+        <!-- <button id="start-button" class="start__button"></button> -->
         <div class="terminal__container">
             <div class="terminal-wrap">
                 <div class="terminal-text">
