added keyboard sounds and completed questline

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <audio id="audio" controls style="display:none">
         <source src="audio/keyboard.ogg" type="audio/mpeg">
     </audio>
+    <audio id="audio2" controls style="display:none">
+        <source src="audio/keyboard2.ogg" type="audio/mpeg">
+    </audio>
     <div class="wrapper">
         <button id="start-button" class="terminal__logo">TERMINAL</button>
         <!-- <button id="start-button" class="start__button"></button> -->
